infrastructure/terraform-manifest/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app-2048
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: react-app-container
        image: 891612577741.dkr.ecr.us-east-1.amazonaws.com/react-app-2048-ss:latest
        ports:
        - containerPort: 3000
