infrastructure/terraform-manifest/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-2048-service
  namespace: dev
spec:
  selector:
    app: react-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
